# speculos

./: .clang-format  .codespell-ignore  .dockerignore  .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  Dockerfile  Dockerfile.build  MANIFEST.in  Pipfile  README.md  build.Dockerfile  clang-armv7m.cmake  compile_commands.json  default.nix  docker-compose.yml  gcc-arm.cmake  genindex.html  index.html  lgtm.yml  objects.inv  pyproject.toml  requirements.html  run.sh  search.html  searchindex.js  setup.py  shell.nix  speculos.nix  speculos.py
src/: CMakeLists.txt  cx.h  cx_aes.c  cx_aes.h  cx_blake2.h  cx_blake2b.c  cx_crc.c  cx_ec.c  cx_ec.h  cx_ed25519.c  cx_ed25519.h  cx_hash.h  cx_hmac.c  cx_math.h  cx_ripemd160.c  cx_rng_rfc6979.c  cx_scc.c  cx_sha256.c  cx_sha3.c  cx_sha512.c  cx_utils.c  cx_utils.h  emu_bagl.c  emu_cx.c  emu_cx_hash.c  emu_cx_math.c  emu_default.c  emu_endorsement.c  emu_endorsement.h  emu_os.c  emu_os_1.5.c  emu_os_1.6.c  emu_os_bip32.c  emu_os_bip32.h  emu_seproxyhal.c  emulate.c  emulate.h  emulate_1.2.c  emulate_1.5.c  emulate_1.6.c  (+17 more)
src/bolos/: bagl.c  bagl.h  cx.c  cx.h  cx_aes.c  cx_aes.h  cx_aes_sdk2.c  cx_blake2.h  cx_blake2b.c  cx_bls.c  cx_bls.h  cx_bls_fp2.c  cx_bls_g2.c  cx_bn.c  cx_bn.h  cx_common.h  cx_const_brainpool.c  cx_const_ecbls12381.c  cx_const_ecedd25519.c  cx_const_ed448.c  cx_const_m25519.c  cx_const_m448.c  cx_const_sec256k1.c  cx_const_sec521r1.c  cx_const_secp.c  cx_const_stark.c  cx_crc.c  cx_crc.h  cx_curve25519.c  cx_curve25519.h  cx_ec.c  cx_ec.h  cx_ec_domain.c  cx_ec_sdk2.h  cx_ecdh.c  cx_ecdh.h  cx_ecdsa.c  cx_ecdsa.h  cx_ecedd25519.c  cx_ecfp.c  (+65 more)
src/bolos/hdkey/include/: hdkey.h  hdkey_bip32.h  hdkey_bls12377.h  hdkey_validate.h  hdkey_zip32.h
src/bolos/hdkey/src/: hdkey.c  hdkey_bip32.c  hdkey_bls12377.c  hdkey_validate.c  hdkey_zip32.c
src/bolos/io/: io.c  io.h
src/bolos/io/mock/include/: cx_rng_internal.h  decorators.h  exceptions.h  os.h  os_helpers.h  os_math.h  os_pic.h  os_pin.h  os_utils.h  ux.h
src/bolos/io/mock/src/: mock.c
src/bolos/io/sdk/include/: appflags.h  errors.h  os_apdu.h  os_app.h  os_errors.h  os_types.h  seproxyhal_protocol.h
src/bolos/io/sdk/io/include/: os_io.h  os_io_default_apdu.h  os_io_seph_cmd.h  os_io_seph_ux.h
src/bolos/io/sdk/io/src/: os_io.c  os_io_default_apdu.c  os_io_seph_cmd.c  os_io_seph_ux.c
src/bolos/io/sdk/lib_nfc/doc/: mainpage.dox
src/bolos/io/sdk/lib_nfc/include/: nfc_ledger.h  nfc_ndef.h
src/bolos/io/sdk/lib_nfc/src/: nfc_ledger.c  nfc_ndef.c
src/bolos/io/sdk/lib_stusb/include/: usbd_conf.h  usbd_core.h  usbd_ctlreq.h  usbd_def.h  usbd_desc.h  (+9 more)
src/output/: parse_elf
src/vnc/: CMakeLists.txt  seccomp-bpf.h  vnc_server.c
src/vnc/cursors/: blue.h  fabrice.h  frame_00.h  frame_03.h  frame_04.h  frame_05.h  frame_06.h  frame_07.h  frame_08.h  frame_09.h  frame_14.h  frame_15.h  frame_16.h  frame_17.h  frame_19.h  frame_20.h  star.h  sword.h
tests/: CMakeLists.txt  Makefile  apdu_client.py  conftest.py  hello.c  nist_cavp.c  nist_cavp.h  test_aes.c  test_apps.py  test_blake2.c  test_btc.py  test_crc16.c  test_ecdh.c  test_eddsa.c  test_hmac.c  test_sha2.c  test_sha3.c
tests/api/: test_api.py
tests/api/resources/: automation.json
tests/apps/: apdu_client.py  conftest.py  finger_client.py  test_btc.py  test_btc_testnet.py  test_ram_page.py  test_vnc.py  utils.py
tests/apps/resources/: btc_getpubkey_nanos.json  btc_getpubkey_nanox.json
tests/c/: CMakeLists.txt  mocks.c  test_environment.c
tests/c/syscalls/: CMakeLists.txt  nist_cavp.c  nist_cavp.h  test_aes.c  test_bip32.c  test_blake2.c  test_bls.c  test_ec.c  test_ecdh.c  test_ecdsa.c  test_ecpoint.c  test_eddsa.c  test_eip2333.c  test_endorsement.c  test_hdkey.c  test_hmac.c  test_math.c  test_mpi_rng.c  test_os_global_pin_is_validated.c  test_rfc6979.c  test_ripemd.c  test_sha2.c  test_sha3.c  utils.h
tests/c/syscalls/cavp/: blake2b_kat.data  groestl_256_short_msg.data  groestl_512_short_msg.data  keccak_224_long_msg.data  sha3_224_long_msg.data  sha3_224_short_msg.data  sha3_512_short_msg.data  sha512_long_msg.data  shake128_long_msg.data  shake128_variable_output.data
tests/c/syscalls/wycheproof/: X25519.data  X448.data  eddsa.data
tests/cavp/: groestl_224_long_msg.data  groestl_224_short_msg.data  groestl_384_long_msg.data  hmac.data  keccak_256_long_msg.data  keccak_256_short_msg.data  keccak_384_long_msg.data  keccak_384_short_msg.data  keccak_512_long_msg.data  keccak_512_short_msg.data  sha224_long_msg.data  sha224_short_msg.data  sha256_long_msg.data  sha256_short_msg.data  sha384_long_msg.data  sha384_short_msg.data  sha3_256_long_msg.data  sha3_512_long_msg.data  shake128_short_msg.data
tests/mcu/: test_automation.py
tests/mcu/resources/: automation_invalid_action_args.json  automation_invalid_action_name.json  automation_invalid_rule_key.json
tests/python/: conftest.py  pytest.ini  test_resources_importer.py
tests/python/api/: test_api.py
tests/python/apps/: test_boil.py  test_btc.py  test_ram_page.py
tests/python/apps/resources/: boil_getpubkey_nanox.json  btc_getpubkey_blue.json
tests/python/mcu/: test_automation.py
tests/python/mcu/resources/: automation_valid.json
tests/python/unit/: test_client_Api.py  test_client_SpeculosClient.py
tests/syscalls/: CMakeLists.txt  nist_cavp.c  nist_cavp.h  test_aes.c  test_bip32.c  test_blake2.c  test_bls.c  test_bn.c  test_crc16.c  test_ec.c  test_ecdh.c  test_ecdsa.c  test_ecpoint.c  test_eddsa.c  test_eip2333.c  test_endorsement.c  test_hmac.c  test_math.c  test_mpi_rng.c  test_os_global_pin_is_validated.c  test_rfc6979.c  test_ripemd.c  test_sha2.c  test_sha3.c  test_slip21.c  utils.c  utils.h
tests/syscalls/cavp/: groestl_256_long_msg.data  groestl_384_short_msg.data  groestl_512_long_msg.data  keccak_224_short_msg.data  sha3_256_short_msg.data  sha3_384_long_msg.data  sha3_384_short_msg.data  sha512_short_msg.data  shake256_long_msg.data  shake256_short_msg.data  shake256_variable_output.data
tests/syscalls/wycheproof/: eddsa.data
tests/wycheproof/: ecdh_secp256k1.data
(+335 files in other folders)
