[build-system]
requires = [
    "setuptools>=61.2",
    "wheel",
    "setuptools_scm",
    "cmake"
]
build-backend = "setuptools.build_meta"

[project]
name = "speculos"
authors = [{name = "Ledger", email = "hello@ledger.fr"}]
description = "Ledger Blue, Stax, Flex and Nano S/S+/X application emulator"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
]
requires-python = ">=3.8"
dependencies = [
    "construct>=2.10.56,<3.0.0",
    "flask>=2.0.0,<3.0.0",
    "flask-restful>=0.3.9,<1.0",
    "jsonschema>=3.2.0,<4.18.0",
    "mnemonic>=0.19,<1.0",
    "pillow>=8.0.0,<11.0.0",
    "pyelftools>=0.27,<1.0",
    "pyqt5>=5.15.2,<6.0.0",
    "requests>=2.25.1,<3.0.0",
    "ledgered>=0.6.2",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/LedgerHQ/speculos"
"Bug Tracker" = "https://github.com/LedgerHQ/speculos/issues"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

[project.scripts]
speculos = "speculos.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {namespaces = false}

[tool.setuptools_scm]
write_to = "speculos/__version__.py"
local_scheme = "no-local-version"

[tool.mypy]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 120
